[package]
name = "rustcaster"
description = "Raycaster pseudo 3D (2.5D) implementation in Rust without OpenGL."
repository = "https://github.com/dhodvogner/rustcaster.git"
license = "GNU GPLv3"
version = "0.1.0"
authors = ["Daniel Hodvogner <dhodvogner@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.17.1"
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.61"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'Window',
    'console'
]
