[package]
name = "rustcaster"
description = "Raycaster pseudo 3D (2.5D) implementation in Rust without OpenGL."
repository = "https://github.com/dhodvogner/rustcaster.git"
license = "GNU GPLv3"
version = "0.1.0"
authors = ["Daniel Hodvogner <dhodvogner@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
once_cell = "1.17.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.61"
web-sys = { version = "0.3.61", features = ['console']}
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"

[target.'cfg(target_arch = "x86_64")'.dependencies]
glutin = "0.29.1"
gl = "0.14.0"